Minor edits to text
Signed-off-by: Rebecca A. Senior <rebecca.a.senior@gmail.com>

--- a/SeniorRA_thermstats_ms.Rmd
+++ b/SeniorRA_thermstats_ms.Rmd
@@ -143,7 +143,7 @@ __Word count:__ 3207/3000 words
 
 2. Here, we present an `R` package -- `ThermStats` -- for processing thermal images and other gridded temperature data. The package addresses current constraints on applying thermography in ecology, by speeding up and simplifying the extraction of data from thermal images, and by facilitating the calculation of different metrics of thermal heterogeneity. *The metrics capture both the frequency distribution and spatial patterns of temperature, and the package functions are designed to accommodate different sampling strategies and data in either matrix or raster format.*
 
-3. We demonstrate how `ThermStats` can be used to capture temperature variation at fine spatial scales in structurally complex habitat, such as tropical rainforest. *Using thermal images collected in the field (~0.5 cm^2^ resolution), we found that thermal hetereogeneity varied little between primary and logged forest, but did vary with time of day. Then comparing temperature extremes in a microclimate layer estimated from LIght Detection And Ranging (LIDAR) data (2,500 m^2^ resolution), we found that both hot and cold extremes were hotter inside oil palm plantations than in the neighbouring forest.*
+3. We demonstrate how `ThermStats` can be used to capture temperature variation at fine spatial scales in structurally complex habitat, such as tropical rainforest. *Using thermal images collected in the field (~0.5 cm^2^ resolution), we found that thermal hetereogeneity varied little between primary and logged forest, but did vary with time of day. Comparing temperature extremes in a microclimate layer estimated from LIght Detection And Ranging (LIDAR) data (2,500 m^2^ resolution), we found that both hot and cold extremes were hotter inside oil palm plantations than in the neighbouring forest.*
 
 4. Our package simplifies the processing of thermal data, and our metrics capture key spatiotemporal temperature trends that underpin physiological, behavioural and demographic responses to environmental change. As such, `ThermStats` can advance a wide range of studies requiring fine-scale surface temperature data for microclimate investigations.
 
@@ -153,9 +153,9 @@ __292 words__
 
 Temperature variation over *spatial* scales of mm to m has a central role in the ecology of many species. For small organisms, this is the scale at which nearly all thermal experiences will occur [@potter_microclimatic_2013]. Mobile species utilise fine-scale thermal heterogeneity on a daily basis to avoid or exploit extremes of heat. Over longer time periods, climate at this scale ('microclimate') can also maximise fitness and thus influence the fine-scale distribution of less mobile species [@maclean_fine-scale_2017]. *Species can* persist within 'microrefugia' where climatic conditions are otherwise unsuitable, potentially maintaining higher overall biodiversity in thermally heterogenous habitats [@hannah_fine-grain_2014]. The same mechanisms underlying fine-scale thermoregulation and thermal microrefugia could temper species' exposure to global climate change [@suggitt_extinction_2018; @scheffers_microhabitats_2014], especially in structurally complex habitats such as tropical rainforests [@scheffers_extreme_2017]. To understand and predict species' responses to temperature change we must therefore be able to efficiently capture thermal heterogeneity at fine spatial scales, but there are challenges associated with acquiring and analysing temperature data at this resolution.
 
-*While dataloggers remain instrumental in the field of thermal ecology [@bramer_advances_2018], technological advances in recent years have made thermal cameras an increasingly affordable and practical complement [@scheffers_extreme_2017; @faye_toolbox_2016]. With one click a single thermal image provides thousands of spatially explicit surface temperature measurements at the mm-cm scale. To make the most of the wealth of data provided by thermal imagery, ecologists need some understanding of infrared technology and its limitations, as well as simple tools that enable a clear and reproducible workflow from potentially thousands of raw images through to simple summary statistics relevant to the biological questions of interest.*
+*While dataloggers remain instrumental in the field of thermal ecology [@bramer_advances_2018], technological advances in recent years have made thermal cameras an increasingly affordable and practical addition [@scheffers_extreme_2017; @faye_toolbox_2016]. With one click a single thermal image provides thousands of spatially explicit surface temperature measurements at the mm-cm scale. To make the most of the wealth of data provided by thermal imagery, ecologists need some understanding of infrared technology and its limitations, as well as simple tools that enable a clear and reproducible workflow from potentially thousands of raw images through to simple summary statistics relevant to the biological questions of interest.*
 
-*Extracting data from thermal images is rarely straightforward. Raw data can be difficult to access, the processing steps unclear and parameters such as emissivity can strongly influence the accuracy of measurements but may not be well understood by the novice user [@bramer_advances_2018]. The extraction of data from FLIR thermal cameras specifically (one of the most commonly used brands) can be achieved using the freely available FLIR Tools software [https://www.flir.com/products/flir-tools; cf. @scheffers_extreme_2017], but this cannot be done in batch and there is poor transparency regarding the conversion of raw values to temperature. The process was simplified by the development of the `Thermimage` package [@tattersall_thermimage:_2017] in `R` [@r_core_team_2018], however `Thermimage` still does not directly facilitate batch processing, nor does it calculate (or suggest) what metrics best capture spatiotemporal temperature variation. We present the package `ThermStats` to extend the functionality of `Thermimage` to meet the needs of ecologists: allowing hundreds of images to be processed with ease, and summarising data in terms of variables that matter to individual organisms.*
+*Extracting data from thermal images is rarely straightforward; raw data can be difficult to access, the processing steps unclear and parameters such as emissivity can strongly influence the accuracy of measurements but may not be well understood by the novice user [@bramer_advances_2018]. The extraction of data from FLIR thermal cameras specifically (one of the most commonly used brands) can be achieved using the freely available FLIR Tools software [https://www.flir.com/products/flir-tools; cf. @scheffers_extreme_2017], but cannot be done in batch and the automatic conversion of raw values to temperature lacks transparency. The process was simplified by the development of the `Thermimage` package [@tattersall_thermimage:_2017] in `R` [@r_core_team_2018], however `Thermimage` still does not directly facilitate batch processing, nor does it calculate (or suggest) what metrics best capture spatiotemporal temperature variation. We present the package `ThermStats` to extend the functionality of `Thermimage` to meet the needs of ecologists: allowing hundreds of images to be processed with ease, and summarising data in terms of variables that matter to individual organisms.*
 
 The most appropriate metrics to quantify thermal heterogeneity will depend on the taxonomic group and research questions of interest. Temperature varies across time and space in many ways that can easily be captured by thermal images; it is important to exploit the information provided without becoming overwhelmed. Both @shi_framework_2016 and @faye_toolbox_2016 provide a useful summary of some important metrics, and @faye_toolbox_2016 introduce a spatial component by borrowing metrics from landscape ecology, such as Shape Index and Cohesion Index [@fragstats_2012]. Extending this approach reveals other relevant techniques, such as hot spot analysis [@getis_local_1996] and connectivity [@mcguire_achieving_2016]. Together this suite of metrics provide a powerful way for ecologists to characterise temperature variation.
 
@@ -176,7 +176,7 @@ As with any field study, the sampling design should aim to achieve sufficient co
 
 Before any data are collected, we recommend users familiarise themselves with the technology [for a thorough review, see @tattersall_infrared_2016]. There are various sources of the infrared radiation detected by a thermal camera, but we want to focus only on the radiation emitted by the object *or scene* of interest, which is a function of its temperature. The amount of radiation emitted by a particular object, for a given temperature, depends on its emissivity. A perfect blackbody has an emissivity of 1, while surfaces that an ecologist is likely to photograph typically have an emissivity from 0.92 [for dry, bare soil; @flir_manual_2016] to 0.99 [for green broadleaf forest; @snyder_classification-based_1998].  Additionally, the temperature and relative humidity of the atmosphere and the distance between the object and the camera will affect (1) the amount of emitted radiation that is absorbed by the atmosphere and (2) the amount of background radiation, with some of this also being reflected by the object (reflected apparent temperature).
 
-To accurately quantify surface temperature, environmental parameters (emissivity, reflected apparent temperature, atmospheric temperature, atmospheric relative humidity and object distance) can be set in the camera or defined during data processing (see 'Step 3: Conversion of raw data'). The benefit of the latter approach is that the user can measure atmospheric temperature and relative humidity concurrently with thermal image collection, and these parameters can then be set individually during image processing. Object distance should be minimised and kept constant where possible. Emissivity can either be estimated from the literature [cf. @scheffers_extreme_2017] or sampled in the field [@flir_manual_2016]. *Temperature measurements will be more accurate if there is less variation in surface emissivity within each image, since only one emissivity value can be supplied. That said, common components of the ground surface, such as leaves and soil, have very similar, high emissivity [> 0.9; @snyder_classification-based_1998] and thus the impact of emissivity variation on temperature measurements is relatively low. Likewise, reflected apparent temperature can be sampled in the field [@flir_manual_2016], but* for high emissivities and short object distances, relatively little radiation is reflected and thus apparent temperature can be assumed to equal the atmospheric temperature [@tattersall_thermimage:_2017]. It is recommended that thermal cameras are regularly calibrated (FLIR Systems suggest doing so once per year).
+To accurately quantify surface temperature, environmental parameters (emissivity, reflected apparent temperature, atmospheric temperature, atmospheric relative humidity and object distance) can be set in the camera or defined during data processing (see 'Step 3: Conversion of raw data'). *In the latter approach the user can* measure atmospheric temperature and relative humidity concurrently with thermal image collection, and *set these parameters during image processing.* Object distance should be minimised and kept constant where possible. Emissivity can either be estimated from the literature [cf. @scheffers_extreme_2017] or sampled in the field [@flir_manual_2016]. *Temperature measurements will be more accurate if there is less variation in surface emissivity within each image. That said, common components of the ground surface, such as leaves and soil, have very similar, high emissivity [> 0.9; @snyder_classification-based_1998] and thus the impact of emissivity variation on temperature measurements is relatively low. Likewise, reflected apparent temperature can be sampled in the field [@flir_manual_2016], but* for high emissivities and short object distances, relatively little radiation is reflected and thus apparent temperature can be assumed to equal the atmospheric temperature [@tattersall_thermimage:_2017]. It is recommended that thermal cameras are regularly calibrated (FLIR Systems suggest doing so once per year).
 
 ```{r fig-1, fig.cap= "Overview of the main `ThermStats` functions and a typical workflow. Dashed lines indicate optional steps. Note that the precise functions used in Step 4 will depend on the study design.", fig.pos = 'H'}
 knitr::include_graphics("figures/fig-1-1.png")
@@ -184,13 +184,13 @@ knitr::include_graphics("figures/fig-1-1.png")
 
 ## Step 2: Data extraction
 
-A single thermal photo from a FLIR model E40 camera comprises 160 x 120 pixels, each of which is a unique measurement of received infrared radiation encoded as raw 16-bit values. *Images are extracted in batch by the function `batch_extract`, which requires only the path to a directory of FLIR images and the external software ExifTool. Instructions for installing ExifTool can be found here: https://sno.phy.queensu.ca/~phil/exiftool/install.html. Windows users may experience difficulties adding ExifTool to the system path, in which case it can be downloaded to a custom location, specified in the argument `exiftoolpath` of `batch_extract`.*
+A single thermal photo from a FLIR model E40 camera comprises 160 x 120 pixels, each of which is a unique measurement of received infrared radiation encoded as raw 16-bit values. *Images are extracted in batch by the function `batch_extract`, which requires only the path to a directory of FLIR images and the external software ExifTool. Instructions for installing ExifTool can be found here: https://sno.phy.queensu.ca/~phil/exiftool/install.html. Windows users may find it easier to download ExifTool to a custom location, specified in the argument `exiftoolpath` of `batch_extract`.*
 
-*All of the code and examples that follow were run on a 64-bit Windows 10 machine with an Intel Core i7-4600U @ 2.10GHz processor and 8GB RAM. The function `batch_extract` took 14 minutes to process 290 images on this machine, and 8 minutes on another machine (64-bit Windows 10 machine with an Intel Core i7-7820X CPU @ 3.60GHz processor and 32GB RAM). Manual extraction using FLIR Tools, for comparison, took 62 minutes.*
+*All of the code and examples that follow were run on a 64-bit Windows 10 machine with an Intel Core i7-4600U @ 2.10GHz processor and 8GB RAM. The function `batch_extract` took 12 minutes to process 290 images on this machine, and 8 minutes on another machine (64-bit Windows 10 machine with an Intel Core i7-7820X CPU @ 3.60GHz processor and 32GB RAM). Manual extraction using FLIR Tools, for comparison, took 62 minutes.*
 
 ## Step 3: Conversion of raw data
 
-The raw values embedded in a FLIR thermal image can be converted to temperature in &deg;C using equations from infrared thermography [@tattersall_thermimage:_2017; @flir_manual_2016]. *This is made simple by the function `batch_convert`. Temperature conversion will be more accurate when the user defines the environmental parameters, described in Step 1. Notably, default emissivity is 1, but should usually take a value between 0.95 and 0.97 [@tattersall_thermimage:_2017], while relative humidity is highly dependent on habitat and weather conditions. Conversion of raw data also requires various calibration constants that are specific to each camera; these are retrieved automatically in `batch_extract` and passed directly to `batch_convert`.*
+The raw values embedded in a FLIR thermal image can be converted to temperature in &deg;C using equations from infrared thermography [@tattersall_thermimage:_2017; @flir_manual_2016] *in the function `batch_convert`. Temperature conversion will be more accurate when the user defines the environmental parameters, described in Step 1. Notably, default emissivity is 1, but should usually take a value between 0.95 and 0.97 [@tattersall_thermimage:_2017], while relative humidity is highly dependent on habitat and weather conditions. Conversion of raw data also requires various calibration constants that are specific to each camera; these are retrieved automatically in `batch_extract` and passed directly to `batch_convert`.*
 
 ## Step 4: Calculate metrics of thermal hetereogeneity
 
@@ -407,7 +407,7 @@ tag_facet(p3,
 
 ## Averaging over repeated images
 
-Averaging across repeated images of the same area could help to reduce unwanted variation, such as that introduced by the camera or photographer. In this example, thermal images were collected at nine points ('spatial replicate') spaced along existing transects in undisturbed primary forest (Danum Valley Conservation Area; 4&deg;57045.2"N, 117&deg;48010.4"E). Each point was visited at two different times ('temporal replicate') on the same day. On each visit to a point, between three and five photographs were taken sequentially ('camera replicate') between thee and five times, with the photographer moving away each time and resetting their position ('photographer replicate'). To smooth variation largely introduced by the camera and photographer, we averaged within temporal replicates using the function `average_by_group`. *The function `plot_stack` is ideal for visualising these data (Figure \@ref(fig:fig-4), as well as functions in the package `rasterVis` [@rastervis_2018]*. 
+Averaging across repeated images of the same area could help to reduce unwanted variation, such as that introduced by the camera or photographer. In this example, thermal images were collected at nine points ('spatial replicate') spaced along existing transects in undisturbed primary forest (Danum Valley Conservation Area; 4&deg;57045.2"N, 117&deg;48010.4"E). Each point was visited at two different times ('temporal replicate') on the same day. On each visit to a point, between three and five photographs were taken sequentially ('camera replicate') between thee and five times, with the photographer moving away each time and resetting their position ('photographer replicate'). To smooth variation largely introduced by the camera and photographer, we averaged within temporal replicates using the function `average_by_group`. *The function `plot_stack` is ideal for visualising these data (Figure \@ref(fig:fig-4)), as well as functions in the package `rasterVis` [@rastervis_2018]*. 
 
 (ref:cap-4) Violin plots of temperature distribution across the raster of each distinct replicate in time. Each datapoint represents one pixel of the raster*, with 100 pixels sampled at random*. Each raster is the average of multiple thermal images collected at the same time and location, averaged within temporal replicates using the function `average_by_group`.
 
@@ -436,9 +436,9 @@ plot_stack(img_stack = flir_group_avg,
 
 ## Using other gridded temperature data
 
-Analytical functions in `ThermStats` are designed for any gridded temperature data. We illustrate this using a mean annual temperature layer (50 x 50 m resolution) estimated from canopy structure and topographic variables measured using LIDAR [@jucker_canopy_2018]. The layer encompasses forest and oil palm plantation within the Stability of Altered Forest Ecosystems (SAFE) project [@ewers_large-scale_2011]. We created a raster stack with one layer for cells inside the plantation boundary and one for cells outside, and used `stats_by_group` to identify hot and cold spots within each layer. The patch characteristics calculated by `stats_by_group` include upper and lower quantiles and the median, which together characterise the temperature distribution and can be used to construct boxplots (Figure \@ref(fig:fig-5)). *We demonstrate that both hot and cold extremes were hotter inside the oil palm plantation than the neighbouring forest.*
+Analytical functions in `ThermStats` are designed for any gridded temperature data. We illustrate this using a mean annual temperature layer (50 x 50 m resolution) estimated from canopy structure and topographic variables measured using LIDAR [@jucker_canopy_2018]. The layer encompasses forest and oil palm plantation within the Stability of Altered Forest Ecosystems (SAFE) project [@ewers_large-scale_2011]. We created a raster stack with one layer for cells inside the plantation boundary and one for cells outside, and used `stats_by_group` to identify hot and cold spots within each layer. The patch characteristics calculated by `stats_by_group` include upper and lower quantiles and the median, which together characterise the temperature distribution and can be used to construct boxplots (Figure \@ref(fig:fig-5)). *We demonstrate that both hot and cold spots were hotter inside the oil palm plantation than the neighbouring forest.*
 
-(ref:cap-5) *Panel (a) shows the study area in the Stability of Altered Forest Ecosystems (SAFE) project, overlaid with boundary of oil palm plantations [@ewers_large-scale_2011]. Variation in modelled mean annual temperature is shown in panel (b) [@jucker_canopy_2018].* Panel (c) shows the temperature distribution of hot spots (left) and cold spots (right), inside (orange) and outside (green) plantations.
+(ref:cap-5) *Panel (a) shows the study area in the Stability of Altered Forest Ecosystems (SAFE) project, overlaid with the boundary of oil palm plantations [@ewers_large-scale_2011]. Variation in modelled mean annual temperature is shown in panel (b) [@jucker_canopy_2018]. Panel (c) shows the temperature distribution of hot spots (orange) and cold spots (green), inside and outside plantations.*
 
 ```{r fig-5, fig.cap= "(ref:cap-5)", fig.width = 16.6/2.54, fig.height=14/2.54, fig.align='center'}
 
@@ -539,7 +539,7 @@ ggpubr::ggarrange(
 
 Our `R` package presents users with a simple protocol for utilising thermography within ecology. The extraction of data from FLIR thermal cameras is made faster and easier, and for any gridded temperature data the package facilitates the calculation of different, biologically-relevant metrics of thermal heterogeneity [@shi_framework_2016; @faye_toolbox_2016; @senior_tropical_2018].
 
-It is important to consider the strengths and weaknesses of thermography when deciding on the most appropriate methodology to answer research questions of interest. Thermal cameras cannot directly measure sub-surface temperatures and are not as well suited for capturing temporal variation compared with dataloggers [@senior_tropical_2018]. Although affordable smartphone attachments are now available, thermal cameras may still be more expensive than dataloggers (depending on the quantity of dataloggers required), and can be sensitive to extreme weather conditions common to regions such as the tropics and arctic [@flir_manual_2016]. @bramer_advances_2018 is an excellent resource for ecologists seeking best practice for using dataloggers; we intend that our study and the references herein offer a similar resource for ecologists using thermography. *As the technology develops we anticipate that other applications and brands of thermal camera will be relevant to ecologists, we therefore invite readers to suggest package enhancements via GitHub (https://github.com/rasenior/ThermStats/issues).*
+It is important to consider the strengths and weaknesses of thermography when deciding on the most appropriate methodology to answer research questions of interest. Thermal cameras cannot directly measure sub-surface temperatures and are not as well suited for capturing temporal variation compared with dataloggers [@senior_tropical_2018]. Although affordable smartphone attachments are now available, thermal cameras may still be more expensive than dataloggers (depending on the quantity of dataloggers required), and can be sensitive to extreme weather conditions common to regions such as the tropics and Arctic [@flir_manual_2016]. @bramer_advances_2018 is an excellent resource for ecologists seeking best practice for using dataloggers; we intend that our study and the references herein offer a similar resource for ecologists using thermography. *As infrared technology develops we anticipate that other applications and brands of thermal camera will be relevant to ecologists, and we therefore invite readers to suggest package enhancements via GitHub (https://github.com/rasenior/ThermStats/issues).*
 
 Fine-scale temperature variation across space and time has a huge influence on species' ecology, which will become increasingly pertinent as average temperatures rise under global climate warming. We showcase how our `R` package and framework can be used to quantify thermal heterogeneity using data at a fine spatial scale, collected using a FLIR thermal camera or modelled using remotely sensed data. By simplifying and streamlining the processing of increasingly available thermal imagery, our approach enables researchers to more readily address important issues in ecology and conservation.
 
@@ -547,7 +547,7 @@ Fine-scale temperature variation across space and time has a huge influence on s
 
 *The development version of* `ThermStats` can be downloaded from GitHub: https://github.com/rasenior/ThermStats. Bug reports and suggested enhancements can be submitted to: https://github.com/rasenior/ThermStats/issues. 
 
-*This manuscript used `ThermStats` version 0.7.10, which is deposited on Zenodo [@senior_thermstats_2019]. The manuscript itself can be reproduced by downloading the scripts and data from GitHub (https://github.com/rasenior/ThermStats_ms), and rendering using either the knit button in RStudio or the code `rmarkdown::render("SeniorRA_thermstats_ms.Rmd", output_format = "bookdown::word_document2")`.*
+*This manuscript used `ThermStats` version 0.9.2, which is deposited on Zenodo [@senior_thermstats_2019]. The manuscript itself can be reproduced by downloading the scripts and data from GitHub (https://github.com/rasenior/ThermStats_ms), and rendering using either the knit button in RStudio or the code `rmarkdown::render("SeniorRA_thermstats_ms.Rmd", output_format = "bookdown::word_document2")`.*
 
 # Acknowledgements
 
