--- a/SeniorRA_thermstats_ms.Rmd
+++ b/SeniorRA_thermstats_ms.Rmd
@@ -155,7 +155,7 @@ Temperature variation over *spatial* scales of mm to m has a central role in the
 
 *While dataloggers remain instrumental in the field of thermal ecology [@bramer_advances_2018], technological advances in recent years have made thermal cameras an increasingly affordable and practical addition [@scheffers_extreme_2017; @faye_toolbox_2016]. With one click a single thermal image provides thousands of spatially explicit surface temperature measurements at the mm-cm scale. To make the most of the wealth of data provided by thermal imagery, ecologists need some understanding of infrared technology and its limitations, as well as simple tools that enable a clear and reproducible workflow from potentially thousands of raw images through to simple summary statistics relevant to the biological questions of interest.*
 
-*Extracting data from thermal images is rarely straightforward; raw data can be difficult to access, the processing steps unclear and parameters such as emissivity can strongly influence the accuracy of measurements but may not be well understood by the novice user [@bramer_advances_2018]. The extraction of data from FLIR thermal cameras specifically (one of the most commonly used brands) can be achieved using the freely available FLIR Tools software [https://www.flir.com/products/flir-tools; cf. @scheffers_extreme_2017], but cannot be done in batch and the automatic conversion of raw values to temperature lacks transparency. The process was simplified by the development of the `Thermimage` package [@tattersall_thermimage:_2017] in `R` [@r_core_team_2018], however `Thermimage` still does not directly facilitate batch processing, nor does it calculate (or suggest) what metrics best capture spatiotemporal temperature variation. We present the package `ThermStats` to extend the functionality of `Thermimage` to meet the needs of ecologists: allowing hundreds of images to be processed with ease, and summarising data in terms of variables that matter to individual organisms.*
+*Extracting data from thermal images is rarely straightforward. Raw data can be difficult to access, the processing steps unclear, and parameters such as emissivity can strongly influence the accuracy of measurements, but may not be well understood by the novice user [@bramer_advances_2018]. The extraction of data from FLIR thermal cameras specifically (one of the most commonly used brands) can be achieved using the freely available FLIR Tools software [https://www.flir.com/products/flir-tools; cf. @scheffers_extreme_2017], but cannot be done in batch and the automatic conversion of raw values to temperature lacks transparency. The process was simplified by the development of the `Thermimage` package [@tattersall_thermimage:_2017] in `R` [@r_core_team_2018]. However, `Thermimage` still does not directly facilitate batch processing, nor does it calculate (or suggest) what metrics best capture spatiotemporal temperature variation. We present the package `ThermStats` to extend the functionality of `Thermimage` to meet the needs of ecologists: allowing hundreds of images to be processed with ease, and summarising data in terms of variables that matter to individual organisms.*
 
 The most appropriate metrics to quantify thermal heterogeneity will depend on the taxonomic group and research questions of interest. Temperature varies across time and space in many ways that can easily be captured by thermal images; it is important to exploit the information provided without becoming overwhelmed. Both @shi_framework_2016 and @faye_toolbox_2016 provide a useful summary of some important metrics, and @faye_toolbox_2016 introduce a spatial component by borrowing metrics from landscape ecology, such as Shape Index and Cohesion Index [@fragstats_2012]. Extending this approach reveals other relevant techniques, such as hot spot analysis [@getis_local_1996] and connectivity [@mcguire_achieving_2016]. Together this suite of metrics provide a powerful way for ecologists to characterise temperature variation.
 
@@ -345,7 +345,7 @@ flir_stats <-
 
 ```
 
-To model the various thermal heterogeneity metrics against time of day and forest type (categorical: primary or logged) we fit Generalized Additive Mixed Effects Models (GAMMs), using the `gamm4` package [@gamm4_2017] in `R`. All measures of thermal heterogeneity were comparable between primary and unlogged forest (P > 0.05; Figure \@ref(fig:fig-3)), but varied from the coolest time of day (~06:00 hr) to the hottest (~12:30 hr). Of particular note is the peak in thermal diversity (Shannon Diversity Index) at noon, and the different temporal patterns of hot spots (median temperature: 27&deg;C) compared to cold spots (median temperature: 25&deg;C). *Our results suggest that logged forests provided comparable opportunities for thermoregulation as nearby primary forest, and that at noon cold spots provided the greatest amount of temperature buffering.*
+To model the various thermal heterogeneity metrics against time of day and forest type (categorical: primary or logged) we fit Generalized Additive Mixed Effects Models (GAMMs), using the `gamm4` package [@gamm4_2017] in `R`. All measures of thermal heterogeneity were comparable between primary and unlogged forest (P > 0.05; Figure \@ref(fig:fig-3)), but varied from the coolest time of day (~06:00 hr) to the hottest (~12:30 hr). Of particular note is the peak in thermal diversity (Shannon Diversity Index) at noon, and the different temporal patterns of hot spots (median temperature: 27&deg;C) compared to cold spots (median temperature: 25&deg;C). *Our results suggest that logged forests provided comparable opportunities for thermoregulation as nearby primary forest, and that at noon, cold spots provided the greatest amount of temperature buffering.*
 
 (ref:cap-3) Trends in various measures of thermal heterogeneity over the day (06:00-14:30 hrs) for fine-scale temperature data collected using a thermal camera in primary (blue) and logged forests (orange). From left to right and top to bottom, the metrics are: median temperature (a); thermal Shannon Diversity Index (b); 95^th^ percentile minus median temperature (c); 5^th^ percentile minus median temperature (d); the average area (cm^2^) per hot spot (e); the average area (cm^2^) per cold spot (f); the number of hot spots per unit area (g); the number of cold spots per unit area (h); the Shape Index *(SI)* of hot spots (i); the Shape Index *(SI)* of cold spots (j); the Aggregation Index *(AI)* of hot spots (k); and the Aggregation Index *(AI)* of cold spots (l). Solid lines are model-predicted values with 95% confidence intervals. Semi-transparent background points represent the raw data. Statistically significant differences are indicated by asterisks: 0.01 < P < 0.05 (\*); 0.001 < P < 0.01 (\*\*) and P < 0.0001 (\*\*\*).
 
@@ -539,7 +539,7 @@ ggpubr::ggarrange(
 
 Our `R` package presents users with a simple protocol for utilising thermography within ecology. The extraction of data from FLIR thermal cameras is made faster and easier, and for any gridded temperature data the package facilitates the calculation of different, biologically-relevant metrics of thermal heterogeneity [@shi_framework_2016; @faye_toolbox_2016; @senior_tropical_2018].
 
-It is important to consider the strengths and weaknesses of thermography when deciding on the most appropriate methodology to answer research questions of interest. Thermal cameras cannot directly measure sub-surface temperatures and are not as well suited for capturing temporal variation compared with dataloggers [@senior_tropical_2018]. Although affordable smartphone attachments are now available, thermal cameras may still be more expensive than dataloggers (depending on the quantity of dataloggers required), and can be sensitive to extreme weather conditions common to regions such as the tropics and Arctic [@flir_manual_2016]. @bramer_advances_2018 is an excellent resource for ecologists seeking best practice for using dataloggers; we intend that our study and the references herein offer a similar resource for ecologists using thermography. *As infrared technology develops we anticipate that other applications and brands of thermal camera will be relevant to ecologists, and we therefore invite readers to suggest package enhancements via GitHub (https://github.com/rasenior/ThermStats/issues).*
+It is important to consider the strengths and weaknesses of thermography when deciding on the most appropriate methodology to answer research questions of interest. Thermal cameras cannot directly measure sub-surface temperatures and are not as well suited for capturing temporal variation compared with dataloggers [@senior_tropical_2018]. Although affordable smartphone attachments are now available, thermal cameras may still be more expensive than dataloggers (depending on the quantity of dataloggers required), and can be sensitive to extreme weather conditions common to regions such as the tropics and Arctic [@flir_manual_2016]. @bramer_advances_2018 is an excellent resource for ecologists seeking best practice for using dataloggers; we intend that our study and the references herein offer a similar resource for ecologists using thermography. *As infrared technology develops, we anticipate that other applications and brands of thermal camera will be relevant to ecologists, and we therefore invite readers to suggest package enhancements via GitHub (https://github.com/rasenior/ThermStats/issues).*
 
 Fine-scale temperature variation across space and time has a huge influence on species' ecology, which will become increasingly pertinent as average temperatures rise under global climate warming. We showcase how our `R` package and framework can be used to quantify thermal heterogeneity using data at a fine spatial scale, collected using a FLIR thermal camera or modelled using remotely sensed data. By simplifying and streamlining the processing of increasingly available thermal imagery, our approach enables researchers to more readily address important issues in ecology and conservation.
 
