--- a/header.tex
+++ b/header.tex
@@ -1,4 +1,10 @@
+
+% General settings
 \usepackage{float}
+\usepackage{setspace}
+\doublespacing
+
+% Header and footer
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{}
@@ -7,23 +13,15 @@
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 \setlength\headheight{14.5pt}
-\usepackage{setspace}
-\doublespacing
 
- % For manual landscape pages
-\usepackage{lscape}
-\newcommand{\blandscape}{\begin{landscape}}
-\newcommand{\elandscape}{\end{landscape}}
-
-% For manual syntax highlighting
-\usepackage{fontspec}
-\setmainfont{Calibri} % Calibri is main font
-\newcommand*{\myfont}{\fontfamily{lmtt}\selectfont} % Latin Modern typewriter for syntax
-\DeclareTextFontCommand{\textmyfont}{\myfont}
-
-%  For tables
-\usepackage{multirow}
-\usepackage{gensymb}
+% For logo on title page
+\usepackage{titling}
+\pretitle{%
+  \begin{center}
+  \LARGE
+  \includegraphics[width=4.39cm,height=5.08cm]{figures/hexsticker.png}\\[\bigskipamount]
+}
+\posttitle{\end{center}}
 
 % To change labelling of supplementary figures and tables
 \newcommand{\beginsupplement}{\setcounter{table}{0}  \renewcommand{\tablename}{Supplementary Table} \setcounter{figure}{0} \renewcommand{\figurename}{Supplementary Figure}}
