Updating static package ref
Signed-off-by: Rebecca A. Senior <rebecca.a.senior@gmail.com>

--- a/refs.bib
+++ b/refs.bib
@@ -3614,11 +3614,9 @@
 	url = {https://CRAN.R-project.org/package=SDMTools}
   }
 @misc{senior_thermstats_2019,
-	title = {{ThermStats v.0.7.10.} {A}vailable at: \url{https://doi.org/10.5281/zenodo.3236753}},
+	title = {{ThermStats v.0.9.3.}},
 	author = {Rebecca A. Senior},
 	year = {2019},
-	doi = {10.5281/zenodo.3236753},
-	publisher={Zenodo},
-	note = "R package version 0.7.10. Available at: \url{https://doi.org/10.5281/zenodo.3236753}",
-	abstractNote = {<p>Initial release</p>}
+	doi = {10.5281/zenodo.3239250},
+	publisher={Zenodo}
   }
