--- a/SeniorRA_thermstats_SOM.tex
+++ b/SeniorRA_thermstats_SOM.tex
@@ -151,7 +151,7 @@
 \pretitle{%
   \begin{center}
   \LARGE
-  \includegraphics[width=4.39cm,height=5.08cm]{figures/hexsticker.png}\\[\bigskipamount]
+  \includegraphics[width=4.39cm,height=5.08cm]{figures/som/hexsticker.png}\\[\bigskipamount]
 }
 \posttitle{\end{center}}
 
@@ -187,7 +187,7 @@ Rebecca A. Senior\textsuperscript{1}*, Jane K. Hill\textsuperscript{2} and David
 
 \begin{figure}[H]
 
-{\centering \includegraphics[width=6.62in,]{figures/fig-s-1} 
+{\centering \includegraphics[width=6.62in,]{figures/som/fig-s-1} 
 
 }
 
@@ -375,7 +375,7 @@ In addition to patch statistics, \texttt{get\_stats} can return (1) the temperat
 
 \begin{figure}[H]
 
-{\centering \includegraphics{./output/fig-1-1} 
+{\centering \includegraphics{./figures/som/fig-1-1} 
 
 }
 
