--- a/header.tex
+++ b/header.tex
@@ -19,7 +19,7 @@
 \pretitle{%
   \begin{center}
   \LARGE
-  \includegraphics[width=4.39cm,height=5.08cm]{figures/hexsticker.png}\\[\bigskipamount]
+  \includegraphics[width=4.39cm,height=5.08cm]{figures/som/hexsticker.png}\\[\bigskipamount]
 }
 \posttitle{\end{center}}
 
