Edit to ggmap citation
Signed-off-by: Rebecca A. Senior <rebecca.a.senior@gmail.com>

--- a/refs.bib
+++ b/refs.bib
@@ -3613,6 +3613,16 @@
 	note = "R package version 1.1-221. Available at: \url{https://CRAN.R-project.org/package=SDMTools}",
 	url = {https://CRAN.R-project.org/package=SDMTools}
   }
+@misc{ggmap_2013,
+    author = {David Kahle and Hadley Wickham},
+    title = {{ggmap}: Spatial Visualization with {ggplot2}},
+    journal = {The R Journal},
+    year = {2013},
+    volume = {5},
+    number = {1},
+    pages = {144--161},
+    url = {https://journal.r-project.org/archive/2013-1/kahle-wickham.pdf},
+  }
 @misc{senior_thermstats_2019,
 	title = {{ThermStats v.0.9.6.}},
 	author = {Rebecca A. Senior},
